    + Specify encoding for the html generation (from the same patch).
    + Deal with badly encoded changelogs (assume latin1).

  * Be sure that seen_new is always defined (Closes: #294420).

  * Ignore when README.Debian/changelog.gz is a directory, just print a
    warning (Closes: #362896).

  * Don't exit because quiet level is '2', use mail instead (Closes: #309262).

 -- Pierre Habouzit <madcoder@debian.org>  Fri, 11 Aug 2006 17:18:17 +0200

apt-listchanges (2.61) unstable; urgency=low

  * Packaging:
    + add a dependency on mail-transport-agent (Closes: #280892, #327590).
    + update depends upon debconf (Closes: #331748).
    + move apt-listchanges away if uninstalled, reinstate it in postinst
      (Closes: #237334, #262682)

  * l10n:
    + update de.po, thanks to Jens Seidel (Closes: #313665).
    + Fix error in french manpage PAGER -> BROWSER (Closes: #367624).

  * Features:
    + use /usr/bin/hostname instead of gethostname that uses uname, so that
      different chroots have different names (Closes: #257734).

 -- Pierre Habouzit <madcoder@debian.org>  Thu, 10 Aug 2006 21:28:36 +0200

apt-listchanges (2.60) unstable; urgency=low

  * Change of maintainer (and upstream):
    + put myself as maintainer.
    + put Matt into Uploaders (thanks for all your work on this package !).
    + ack NMUs (Closes: #251084, 259171, 260295, 260534, 262603, 280323,
      283357, 285440, 292739, 293594, 293594, 294948, 375300, 375953, 375956,
      380759)
    + update debian/copyright accordingly.
  * Python policy last touch:
    + do not use dh_python anymore.
    + .pyc are handled correctly (Closes: #133306).
  * Bump DH_COMPAT to 5.
  * Ensure ucf is here before purging in postrm (Closes: #315174).
  * apt-listchanges new translations:
    + Traditional Chinese thanks to Kanru Chen (Closes: #297242).
    + Czech thanks to Miroslav Kure (Closes: #327508).
  * apt-listchanges templates po: