@@ -27,6 +27,11 @@ apt-listchanges (2.62~experimental1) UNRELEASED; urgency=low
 
   * Don't exit because quiet level is '2', use mail instead (Closes: #309262).
 
+  * Various code simplifications (using python2.4-isms).
+
+  * Make apt-listchanges modules private, move things to apt-listchanges
+    instead of apt_listchanges directory.
+
  -- Pierre Habouzit <madcoder@debian.org>  Fri, 11 Aug 2006 17:18:17 +0200
 
 apt-listchanges (2.61) unstable; urgency=low
